compiler-core/main/__generate/erlang/tests/snapshots/gleam_core____generate__erlang__tests__let_assert__assignment_pattern.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests/let_assert.rs
assertion_line: 121
expression: "pub fn go() {\n  let assert 123 as x = 123\n  x\n}"
snapshot_kind: text
---
----- SOURCE CODE
pub fn go() {
  let assert 123 as x = 123
  x
}

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([go/0]).

-file("project/test/my/mod.gleam", 1).
-spec go() -> integer().
go() ->
    X@1 = case 123 of
        123 = X -> X;
        _assert_fail ->
            erlang:error(#{gleam_error => let_assert,
                        message => <<"Pattern match failed, no pattern matched the value."/utf8>>,
                        file => <<?FILEPATH/utf8>>,
                        module => <<"my/mod"/utf8>>,
                        function => <<"go"/utf8>>,
                        line => 2,
                        value => _assert_fail,
                        start => 16,
                        'end' => 41,
                        pattern_start => 27,
                        pattern_end => 35})
    end,
    X@1.
