compiler-core/main/__generate/erlang/tests/snapshots/gleam_core____generate__erlang__tests__let_assert__bit_array_assignment_discard.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests/let_assert.rs
assertion_line: 282
expression: "\npub fn main() {\n  let assert <<_ as number>> = <<10>>\n  number\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main() {
  let assert <<_ as number>> = <<10>>
  number
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([main/0]).

-file("project/test/my/mod.gleam", 2).
-spec main() -> integer().
main() ->
    Number@1 = case <<10>> of
        <<Number>> -> Number;
        _assert_fail ->
            erlang:error(#{gleam_error => let_assert,
                        message => <<"Pattern match failed, no pattern matched the value."/utf8>>,
                        file => <<?FILEPATH/utf8>>,
                        module => <<"my/mod"/utf8>>,
                        function => <<"main"/utf8>>,
                        line => 3,
                        value => _assert_fail,
                        start => 19,
                        'end' => 54,
                        pattern_start => 30,
                        pattern_end => 45})
    end,
    Number@1.
