compiler-core/main/__generate/erlang/tests/snapshots/gleam_core____generate__erlang__tests__let_assert__bit_array_pattern.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests/let_assert.rs
assertion_line: 185
expression: "pub fn go() {\n  let assert <<a:2, b:3, c:3>> = <<123>>\n  a + b + c\n}"
snapshot_kind: text
---
----- SOURCE CODE
pub fn go() {
  let assert <<a:2, b:3, c:3>> = <<123>>
  a + b + c
}

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([go/0]).

-file("project/test/my/mod.gleam", 1).
-spec go() -> integer().
go() ->
    {A@1, B@1, C@1} = case <<123>> of
        <<A:2, B:3, C:3>> -> {A, B, C};
        _assert_fail ->
            erlang:error(#{gleam_error => let_assert,
                        message => <<"Pattern match failed, no pattern matched the value."/utf8>>,
                        file => <<?FILEPATH/utf8>>,
                        module => <<"my/mod"/utf8>>,
                        function => <<"go"/utf8>>,
                        line => 2,
                        value => _assert_fail,
                        start => 16,
                        'end' => 54,
                        pattern_start => 27,
                        pattern_end => 44})
    end,
    (A@1 + B@1) + C@1.
