compiler-core/main/__generate/erlang/tests/snapshots/gleam_core____generate__erlang__tests__let_assert__just_variable.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests/let_assert.rs
assertion_line: 74
expression: "pub fn go() {\n  let assert x = Ok(1)\n  x\n}"
snapshot_kind: text
---
----- SOURCE CODE
pub fn go() {
  let assert x = Ok(1)
  x
}

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([go/0]).

-file("project/test/my/mod.gleam", 1).
-spec go() -> {ok, integer()} | {error, any()}.
go() ->
    X = {ok, 1},
    X.
